syntax = "proto3";
import "google/protobuf/any.proto";
package core;

service PaymentGatewayService {
  rpc CreateUser (PG_CreateRequest) returns (PG_User);
}


message PG_Attributes {
  string username = 1;
  string email = 2;
  string password = 3;
}


message PG_UserData {
  string type = 1;
  PG_Attributes attributes = 2;
}

message PG_CreateRequest {
  PG_UserData data = 1;
}

message PG_User {
  google.protobuf.Any data = 1;
}